# codex-win11-zh-ops

./: .editorconfig  .gitattributes  .gitignore  AGENTS.md  LICENSE  README.md  VALIDATION.md  pyproject.toml
.github/ISSUE_TEMPLATE/: codex-speed.md
docs/: failure-taxonomy.md
docs/playbooks/: agent-run-plan.md  agents-layering.md  chinese-encoding.md  github-pr-flow.md  win11-shell-routing.md
evals/: harness.py
evals/scenarios/dirty-worktree-stop/: prompt.md  scenario.json
evals/scenarios/generated-file-guard/: prompt.md  scenario.json
evals/scenarios/gh-vs-connector/: prompt.md  scenario.json
evals/scenarios/pr-body-chinese-code-fence/: prompt.md  scenario.json
evals/scenarios/ps51-chain-operator/: prompt.md  scenario.json
evals/scenarios/zh-json-roundtrip/: prompt.md  scenario.json
evals/scenarios/zh-markdown-edit/: prompt.md  scenario.json
examples/agent-run-plan/: README.md  codex_tasks.jsonl
src/codex_win11_zh/: __init__.py  agent.py  agent_worker.py  agents_lint.py  cleanup.py  cli.py  encoding.py  evals.py  gh.py  git.py  pr_body.py  review_pack.py  runtime.py  scope_check.py  shell.py  stdio.py  test_plan.py  timing.py
templates/hooks/: hooks.json
templates/repo/: AGENTS.md  AGENTS.strict.md  codex-task-card-template.md  codex-workflow.md  scripts_AGENTS.md
tests/: test_agent.py  test_agents_lint.py  test_cleanup.py  test_encoding.py  test_hooks.py  test_pr_body.py  test_review_pack.py  test_runtime.py  test_shell.py  test_templates.py  test_test_plan.py  test_timing.py
tests/fixtures/: pr-body-good.md
(+11 files in other folders)
