[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-win11-zh-ops"
version = "0.1.0"
description = "Codex efficiency toolkit for Windows 11 Simplified Chinese GitHub workflows."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "codex-win11-zh-ops maintainers"}
]
keywords = ["codex", "windows", "powershell", "github", "chinese", "encoding"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Operating System :: Microsoft :: Windows",
  "Topic :: Software Development :: Quality Assurance",
]
dependencies = []

[project.scripts]
codex-win = "codex_win11_zh.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
codex_win11_zh = ["templates/**/*", "templates/repo/.gitattributes"]
